# Comparator

./: Makefile  README.md  cmp.cpp  comparator.cpp  data.cpp  main.cpp  result.txt  run.bat  stds.cpp  test.cpp
Judger/: judge.cpp  judge.h
hackdata/: main.py  pyproject.toml
hackdata/data/: 1.in  10.in  11.in  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  2.in  20.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  28.in  29.in  3.in  30.in  31.in  32.in  33.in  34.in  35.in  36.in  37.in  38.in  39.in  4.in  40.in  41.in  42.in  43.in  44.in  45.in  (+10 more)
judge/: main.cpp
