[tool.poetry]
name = "hackdata"
version = "0.1.0"
description = ""
authors = ["flora <flora_chen2021@163.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
